--- a/wisata.html
+++ b/wisata.html
@@ -13,7 +13,7 @@
     <section id="wisata_page">
         <header>
             <div class="logo">
-                <!-- <img src="./public/image/logo/logo-wisata.png" alt=""> -->
+                <img src="./public/image/logo/logo-wisata.png" alt="">
             </div>
             <div class="title">
                 <h1>WISATA</h1>
