message: marekne halaman utama

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kel - 5</title>
+    <title>KEL4 - BLPT</title>
     <link rel="stylesheet" href="./src/css/main.css" />
     <script src="./src/js/app.js" defer></script>
 </head>
@@ -63,16 +63,18 @@
         </section>
         <footer>
             <div>
-                <h3>Create with 💓 by kelompok 4</h3>
+                <h3>CREATE WITH 💓 by KELOMPOK - 4</h3>
             </div>
             <div>
                 <ul>
                     <li>Bagus Dzakiy Rahman Saputra</li>
                     <li>Muhammad Fauzi Nur Aziz</li>
-                    <li>Rafi Ari Fiandi</li>
                 </ul>
                 <ul>
+                    <li>Rafi Ari Fiandi</li>
                     <li>Diva Aldita Putri</li>
+                </ul>
+                <ul>
                     <li>Bintang Lailatul Mukaromah</li>
                     <li>Nabillah Rachelia Meyshita</li>
                 </ul>
