--- a/wisata.html
+++ b/wisata.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kel - 5</title>
+    <title>KEL4 - WISATA</title>
     <link rel="stylesheet" href="./src/css/main.css" />
     <script src="./src/js/app.js" defer></script>
 </head>
@@ -49,28 +49,54 @@
                     <div class="content_image">
                         <img src="./public/image/wisata/main-image.jpg" alt="heha">
                         <div class="content_image_description">
-                            <p>Yogyakarta selalu punya cerita dan romansa di setiap sudut kotanya. Sebab ada begitu banyak destinasi wisata yang bisa kamu kunjungi, mulai dari alam, museum, seni, kafe, hingga kuliner, semuanya tersaji untuk memuaskan dahaga traveler yang ingin berwisata ke Kota Gudeg. Salah satunya adalah destinasi wisata baru yang ada di Desa Patuk, Gunungkidul, Daerah Istimewa Yogyakarta. Adalah Heha Skyiew yang punya pemandangan yang luar biasa. Karena di Heha Sky View, kamu bisa menikmati sisi lain indahnya pemandangan Kota Yogyakarta. Tak hanya itu saja, kamu pun juga disuguhkan dengan pemandangan gagahnya Gunung Merapi serta eloknya matahari di kala senja. Dibangun pada 2018 silam, tempat ini sebenarnya adalah sebuah restoran yang terdiri dari tiga lantai yang memadukan konsep tempat makan dengan spot foto berlatar pemandangan alam dan kawasan kota Jogja dari ketinggian.</p>
+                            <p>Yogyakarta selalu punya cerita dan romansa di setiap sudut kotanya. Sebab ada begitu
+                                banyak destinasi wisata yang bisa kamu kunjungi, mulai dari alam, museum, seni, kafe,
+                                hingga kuliner, semuanya tersaji untuk memuaskan dahaga traveler yang ingin berwisata ke
+                                Kota Gudeg. Salah satunya adalah destinasi wisata baru yang ada di Desa Patuk,
+                                Gunungkidul, Daerah Istimewa Yogyakarta. Adalah Heha Skyiew yang punya pemandangan yang
+                                luar biasa. Karena di Heha Sky View, kamu bisa menikmati sisi lain indahnya pemandangan
+                                Kota Yogyakarta. Tak hanya itu saja, kamu pun juga disuguhkan dengan pemandangan
+                                gagahnya Gunung Merapi serta eloknya matahari di kala senja. Dibangun pada 2018 silam,
+                                tempat ini sebenarnya adalah sebuah restoran yang terdiri dari tiga lantai yang
+                                memadukan konsep tempat makan dengan spot foto berlatar pemandangan alam dan kawasan
+                                kota Jogja dari ketinggian.</p>
                         </div>
                     </div>
                     <p>
-                        
-                        Nama Heha sendiri diambil dari nama depan selaku pemilik resto dan juga partner bisnisnya. Tempat wisata yang baru saja dibuka beberapa waktu lalu ini langsung menyedot perhatian wisatawan.Pengunjung atau wisatawan yang datang tak hanya dapat menikmati makanan dan minuman yang ditawarkan di restoran tersebut, namun mereka juga ditawarkan banyak sekali spot swafoto dan salah satu spot foto yang diburu pengunjung adalah Sky Glass yaitu teras kaca yang Instagramable.Selain spot foto yang Instagramable, di sini juga tersedia sebuah taman yang cocok buat bersantai. Jika kamu termasuk si penikmat senja, tempat ini juga cocok untuk dijadikan sebagai lokasi berburu sunset. Sebab, kamu bisa melihat indahnya pesona matahari yang perlahan tenggelam dengan begitu jelas.
-                        Sementara itu, di waktu malam, kamu bisa menikmati gemerlapnya lampu Kota Yogyakarta diselimuti dinginnya semilir angin.Bagi kamu yang ingin berkunjung ke Heha Skyview pada pukul 10.00 WIB - 16.30 WIB akan dikenakan biaya sekitar Rp 10 ribu. Sedangkan, pada pukul 16.30 WIB ke atas, pengunjung akan dikenakan biaya Rp 15 ribu. Lain lagi jika kamu ingin berfoto di spot teras kaca, akan dikenakan tarif foto Rp 30 ribu. Untuk jasa fotonya Rp 5 ribu.  Heha Skyview dibuka mulai pukul 10.00 WIB - 22.00 WIB sedangkan pada hari Jumat - Minggu dibuka hingga pukul 23.00 WIB.</p>
+
+                        Nama Heha sendiri diambil dari nama depan selaku pemilik resto dan juga partner bisnisnya.
+                        Tempat wisata yang baru saja dibuka beberapa waktu lalu ini langsung menyedot perhatian
+                        wisatawan.Pengunjung atau wisatawan yang datang tak hanya dapat menikmati makanan dan minuman
+                        yang ditawarkan di restoran tersebut, namun mereka juga ditawarkan banyak sekali spot swafoto
+                        dan salah satu spot foto yang diburu pengunjung adalah Sky Glass yaitu teras kaca yang
+                        Instagramable.Selain spot foto yang Instagramable, di sini juga tersedia sebuah taman yang cocok
+                        buat bersantai. Jika kamu termasuk si penikmat senja, tempat ini juga cocok untuk dijadikan
+                        sebagai lokasi berburu sunset. Sebab, kamu bisa melihat indahnya pesona matahari yang perlahan
+                        tenggelam dengan begitu jelas.
+                        Sementara itu, di waktu malam, kamu bisa menikmati gemerlapnya lampu Kota Yogyakarta diselimuti
+                        dinginnya semilir angin.Bagi kamu yang ingin berkunjung ke Heha Skyview pada pukul 10.00 WIB -
+                        16.30 WIB akan dikenakan biaya sekitar Rp 10 ribu. Sedangkan, pada pukul 16.30 WIB ke atas,
+                        pengunjung akan dikenakan biaya Rp 15 ribu. Lain lagi jika kamu ingin berfoto di spot teras
+                        kaca, akan dikenakan tarif foto Rp 30 ribu. Untuk jasa fotonya Rp 5 ribu. Heha Skyview dibuka
+                        mulai pukul 10.00 WIB - 22.00 WIB sedangkan pada hari Jumat - Minggu dibuka hingga pukul 23.00
+                        WIB.</p>
                 </div>
             </main>
         </section>
         <footer>
             <div>
-                <h3>Create with 💓 by kelompok 4</h3>
+                <h3>CREATE WITH 💓 by KELOMPOK - 4</h3>
             </div>
             <div>
                 <ul>
                     <li>Bagus Dzakiy Rahman Saputra</li>
                     <li>Muhammad Fauzi Nur Aziz</li>
-                    <li>Rafi Ari Fiandi</li>
                 </ul>
                 <ul>
+                    <li>Rafi Ari Fiandi</li>
                     <li>Diva Aldita Putri</li>
+                </ul>
+                <ul>
                     <li>Bintang Lailatul Mukaromah</li>
                     <li>Nabillah Rachelia Meyshita</li>
                 </ul>
