message: marekne layout kabeh halaman

--- a/amikom.html
+++ b/amikom.html
@@ -4,12 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KEL4 - AMIKOM</title>
+    <title>KEL4 - Penjelasan AMIKOM</title>
     <link rel="stylesheet" href="./src/css/main.css" />
     <script src="./src/js/app.js" defer></script>
 </head>
 
 <body>
+    <div id="close-content">
+        <h1>Oops.......</h1>
+        <h1>Saat ini Hanya bisa digunakan di</h1>
+        <h1>-Layar Besar-</h1>
+        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )</h1>
+    </div>
     <section id="amikom_page">
         <header>
             <div class="logo">
@@ -32,10 +38,10 @@
                     <h1>TABEL KONTEN</h1>
                 </div>
                 <ul>
-                    <li><a href="./index.html">PENJELASAN</a></li>
-                    <li><a href="./views/bltp/detail/materi/index.html">MATERI</a></li>
-                    <li><a href="./views/bltp/detail/struktur/index.html">STRUKTUR</a></li>
-                    <li><a href="./views/bltp/detail/dokumentasi/index.html">DOKUMENTASI</a></li>
+                    <li><a href="./amikom.html">PENJELASAN</a></li>
+                    <li><a href="./views/amikom/detail/materi/index.html">MATERI</a></li>
+                    <li><a href="./views/amikom/detail/struktur/index.html">STRUKTUR</a></li>
+                    <li><a href="./views/amikom/detail/dokumentasi/index.html">DOKUMENTASI</a></li>
                 </ul>
             </aside>
             <main>
