--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KEL4 - BLPT</title>
+    <title>KEL4 - Penjelasan BLPT</title>
+    <!-- Font Awesome Cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- CSS -->
     <link rel="stylesheet" href="./src/css/main.css" />
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="./src/js/app.js" defer></script>
 </head>
 
 <body>
+    <div id="close-content">
+        <h1>Oops.......</h1>
+        <h1>Saat ini Hanya bisa digunakan di</h1>
+        <h1>-Layar Besar-</h1>
+        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )</h1>
+    </div>
     <section id="blpt_page">
         <header>
             <div class="logo">
