message: nambahi sitik

--- a/amikom.html
+++ b/amikom.html
@@ -46,7 +46,7 @@
             </aside>
             <main>
                 <div class="title">
-                    <h1>PENJELASAN</h1>
+                    <h1>TENTANG AMIKOM</h1>
                 </div>
                 <div class="content">
                     <p>Amikom Yogyakarta adalah sebuah institusi pendidikan tinggi yang berperan penting dalam
