--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
     <div id="close-content">
         <h1>Oops.......</h1>
-        <h1>Saat ini Hanya bisa digunakan di</h1>
-        <h1>-Layar Besar-</h1>
+        <h1>Developer tidak berencana mengembangkan mobile design</h1>
+        <h1>-Only-</h1>
         <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )</h1>
     </div>
     <section id="blpt_page">
@@ -52,7 +52,7 @@
             </aside>
             <main>
                 <div class="title">
-                    <h1>PENJELASAN</h1>
+                    <h1>TENTANG BLPT</h1>
                 </div>
                 <div class="content">
                     <p>BLPT adalah sebuah Unit Kerja Satuan Perangkat Daerah (UK SKPD) di bawah naungan Dinas
