--- a/wisata.html
+++ b/wisata.html
@@ -46,7 +46,7 @@
             </aside>
             <main>
                 <div class="title">
-                    <h1>PENJELASAN</h1>
+                    <h1>TENTANG WISATA</h1>
                 </div>
                 <div class="content">
                     <div class="content_title">
