--- a/wisata.html
+++ b/wisata.html
@@ -14,12 +14,14 @@
         <h1>Oops.......</h1>
         <h1>Saat ini Hanya bisa digunakan di</h1>
         <h1>-Layar Besar-</h1>
-        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )</h1>
+        <h1>( <i class="fa-solid fa-desktop"></i>, <i class="fa-solid fa-computer"></i>, <i
+                class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
+        </h1>
     </div>
     <section id="wisata_page">
         <header>
             <div class="logo">
-                <img src="./public/image/logo/logo-wisata.png" alt="">
+                <img src="./public/image/logo/logo-wisata.png" alt="logo-wisata">
             </div>
             <div class="title">
                 <h1>WISATA</h1>
@@ -53,7 +55,7 @@
                         <h1>HEHA SKY VIEW</h1>
                     </div>
                     <div class="content_image">
-                        <img src="./public/image/wisata/main-image.jpg" alt="heha">
+                        <img src="./public/image/wisata/heha.jpg" alt="heha">
                         <div class="content_image_description">
                             <p>Yogyakarta selalu punya cerita dan romansa di setiap sudut kotanya. Sebab ada begitu
                                 banyak destinasi wisata yang bisa kamu kunjungi, mulai dari alam, museum, seni, kafe,
@@ -65,11 +67,11 @@
                                 gagahnya Gunung Merapi serta eloknya matahari di kala senja. Dibangun pada 2018 silam,
                                 tempat ini sebenarnya adalah sebuah restoran yang terdiri dari tiga lantai yang
                                 memadukan konsep tempat makan dengan spot foto berlatar pemandangan alam dan kawasan
-                                kota Jogja dari ketinggian.</p>
+                                kota Jogja dari ketinggian.
+                            </p>
                         </div>
                     </div>
                     <p>
-
                         Nama Heha sendiri diambil dari nama depan selaku pemilik resto dan juga partner bisnisnya.
                         Tempat wisata yang baru saja dibuka beberapa waktu lalu ini langsung menyedot perhatian
                         wisatawan.Pengunjung atau wisatawan yang datang tak hanya dapat menikmati makanan dan minuman
@@ -85,7 +87,8 @@
                         pengunjung akan dikenakan biaya Rp 15 ribu. Lain lagi jika kamu ingin berfoto di spot teras
                         kaca, akan dikenakan tarif foto Rp 30 ribu. Untuk jasa fotonya Rp 5 ribu. Heha Skyview dibuka
                         mulai pukul 10.00 WIB - 22.00 WIB sedangkan pada hari Jumat - Minggu dibuka hingga pukul 23.00
-                        WIB.</p>
+                        WIB.
+                    </p>
                 </div>
             </main>
         </section>
