--- a/amikom.html
+++ b/amikom.html
@@ -19,7 +19,7 @@
     <section id="amikom_page">
         <header>
             <div class="logo">
-                <img src="./public/image/logo/logo-amikom.jpg" alt="">
+                <img src="./public/image/logo/logo-amikom.jpg" alt="logo-amikom">
             </div>
             <div class="title">
                 <h1>AMIKOM</h1>
@@ -54,7 +54,7 @@
                         focus utama pada bidang-bidang tersebut, Amikom menyediakan berbagai program studi yang beragam
                         dan relevan dengan tuntutan pasar kerja saat ini. Program-program seperti Ilmu Komunikasi,
                         Teknik Informatika, Sistem Informasi, dan Desain Komunikasi Visual telah terbukti memberikan
-                        mahasiswa pengetahuan dan keterampilan yang dibutuhkan untukbersaing di era digital ini.
+                        mahasiswa pengetahuan dan keterampilan yang dibutuhkan untuk bersaing di era digital ini.
                         Selain menawarkan kurikulum yang komprehensif, Amikom Yogyakarta juga dikenal karena
                         fasilitasnya yang memadai dan modern. Mahasiswa dapat mengakses laboratorium komputer yang
                         dilengkapi dengan perangkat terbaru, perpustakaan yang lengkap dengan referensi terkini, dan
