--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="blpt_page">
         <header>
             <div class="logo">
-                <img src="./public/image/logo/logo-blpt.png" alt="">
+                <img src="./public/image/logo/logo-blpt.png" alt="logo-blpt">
             </div>
             <div class="title">
                 <h1>BLPT</h1>
