--- a/amikom.html
+++ b/amikom.html
@@ -39,6 +39,8 @@
                 </div>
                 <ul>
                     <li><a href="./amikom.html">PENJELASAN</a></li>
+                    <li><a href="./views/amikom/detail/sejarah/index.html">SEJARAH</a></li>
+                    <li><a href="./views/amikom/detail/visi/index.html">VISI & MISI</a></li>
                     <li><a href="./views/amikom/detail/materi/index.html">MATERI</a></li>
                     <li><a href="./views/amikom/detail/struktur/index.html">STRUKTUR</a></li>
                     <li><a href="./views/amikom/detail/dokumentasi/index.html">DOKUMENTASI</a></li>
