--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 </div>
                 <ul>
                     <li><a href="./index.html">PENJELASAN</a></li>
+                    <li><a href="./views/bltp/detail/sejarah/index.html">SEJARAH</a></li>
+                    <li><a href="./views/bltp/detail/visi/index.html">VISI & MISI</a></li>
                     <li><a href="./views/bltp/detail/materi/index.html">MATERI</a></li>
                     <li><a href="./views/bltp/detail/struktur/index.html">STRUKTUR</a></li>
                     <li><a href="./views/bltp/detail/projek/index.html">PROJEK</a></li>
